--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 						<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">Reviev</a>
 						<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">FAQ</a>
 					</div>
-					<div class="buy-button__header">
-						<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik"  class="buy-button__header">Get a Ticket</a>
-					</div>
+					<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
 				</div>
 			</div>
 		</header>
@@ -42,9 +40,6 @@
 						<span>READY TO DIVE INTO THE WORLD</span><br>
 						<span>OF FABULOUS BALI</span>
 						<span>All in one: last-minute tours, canceled tours, early booking offers and special rates from tour operators.</span>
-					</div>
-					<div class="smaller-text__text-block">
-						
 					</div>
 				</div>
 			</div>
@@ -57,7 +52,87 @@
 							<p>The best places in the resort</p>
 							<p>Watch the new video</p>
 						</div>
-						<a  target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik"><img src="img/bali-pagoda-indonesia-1.png" alt=""></a>
+						<div class="video-box__video-container">
+							<a  target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik">
+								<svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" viewBox="0 0 14 17" fill="none">
+									<path d="M13.3561 8.7143L0.628389 16.7312L0.628389 0.697375L13.3561 8.7143Z" fill="#565656"/>
+									</svg>
+							</a>		
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="sponsors">
+			<div class="content">
+				<div class="sponsors__container">
+					<img src="img/sponsor1.png" alt="">
+					<img src="img/sponsor2.png" alt="">
+					<img src="img/sponsor3.png" alt="">
+					<img src="img/sponsor4.png" alt="">
+				</div>
+			</div>
+		</div>
+		<div class="attraction">
+			<div class="content">
+				
+				<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+				<div class="header__attraction">
+					<p>You Will See The Most Beautiful Sights Of Bali</p>
+					<p>The sights of Bali are so numerous and varied that even an experienced tourist will look at them with undisguised surprise and delight. </p>
+				</div>
+				<div class="information__attraction">
+					<div class="bar">
+							<img src="img/forest.png" alt="">
+						<div class="text-container__bar">
+							<p>Ujung Water Palace</p>
+							<p>The most beautiful building of the island is also included in the list of "the most interesting places in Bali". Each bush of the palace territory is carefully trimmed and well-groomed.</p>
+						</div>
+					</div>
+					<div class="bar">
+							<img src="img/water.png" alt="">
+						<div class="text-container__bar">
+							<p>Monkey forest in Ubud</p>
+							<p>Speaking about the best sights of Bali, one cannot help but talk about the area covered with large trees, lush shrubs and impassable thickets.</p>
+						</div>
+					</div>
+					<div class="bar">
+							<img src="img/temple.png" alt="">
+						<div class="text-container__bar">
+							<p>Pura Besakih Temple</p>
+							<p>The ancestor” of all the temples and the main shrine of Bali invariably tops the rating of the most visited architectural monuments.</p>
+						</div>
+					</div>
+					<div class="bar">
+							<img src="img/tirta.png" alt="">
+						<div class="text-container__bar">
+							<p>Tirta Gangga Water Palace</p>
+							<p>If you are tired of a beach holiday, considering affordable excursions in Bali, pay attention to this object of three luxurious palace complexes.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="galerry">
+			<div class="content">
+				<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+				<div class="header__gallery">
+					Our exclusive tour schedule will not leave you indifferent
+				</div>
+				<div class="check-box-container">
+					<div class="image-box__check-box-container">
+
+					</div>
+					<div class="check-box__check-box-container">
+						<div class="radio-container__check-box">
+							<input type="radio" id="day1" name="day" value="day1">
+						</div>
+						<div class="radio-container__check-box">
+							<input type="radio" id="day2" name="day" value="day2">
+						</div>
+						<div class="radio-container__check-box">
+							<input type="radio" id="day3" name="day" value="day3">
+						</div>
 					</div>
 				</div>
 			</div>
