--- a/index.html
+++ b/index.html
@@ -1,169 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600;700&family=Inter:wght@400;500;600;700&family=Lato:ital,wght@0,300;0,400;1,400;1,700&family=Montserrat&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
-	<title>Bali</title>
-</head>
-<body>
-	<header>	
-		<div class="content">
-			<div class="content-box__header">
-				<div class="text__header">
-					travel bali
-				</div>
-				<div class="header__burger">
-					<span></span>
-				</div>
-				<nav class="header-menu">
-					<ul class="buttons-container__header">
-						<li><a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">Home</a></li>
-						<li><a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">Attraction</a></li>
-						<li><a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">Timeline</a></li>
-						<li><a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">Reviev</a></li>
-						<li><a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="button__header">FAQ</a></li>
-					</ul>
-				</nav>
-				<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
-			</div>
-		</div>
-	</header>
-	<div class="text-block">
-		<div class="content">
-			<div class="text-container">
-				<div class="bigger-text__text-block">
-					<span>READY TO DIVE INTO THE WORLD</span><br>
-					<span>OF FABULOUS BALI</span>
-					<span>All in one: last-minute tours, canceled tours, early booking offers and special rates from tour operators.</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="image-box">
-		<div class="content">
-			<div class="img-container__image-box">
-				<div class="video-container__image-box">
-					<div class="text-box__video-container">
-						<p>The best places in the resort</p>
-						<p>Watch the new video</p>
-					</div>
-					<div class="video-box__video-container">
-						<a  target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik">
-							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" viewBox="0 0 14 17" fill="none">
-								<path d="M13.3561 8.7143L0.628389 16.7312L0.628389 0.697375L13.3561 8.7143Z" fill="#565656"/>
-								</svg>
-						</a>		
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="sponsors">
-		<div class="content">
-			<div class="sponsors__container">
-				<img src="img/sponsor1.png" alt="">
-				<img src="img/sponsor2.png" alt="">
-				<img src="img/sponsor3.png" alt="">
-				<img src="img/sponsor4.png" alt="">
-			</div>
-		</div>
-	</div>
-	<div class="attraction">
-		<div class="content">
-			
-			<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
-			<div class="header__attraction">
-				<p>You Will See The Most Beautiful Sights Of Bali</p>
-				<p>The sights of Bali are so numerous and varied that even an experienced tourist will look at them with undisguised surprise and delight. </p>
-			</div>
-			<div class="information__attraction">
-				<div class="bar">
-						<img src="img/forest.png" alt="">
-					<div class="text-container__bar">
-						<p>Monkey forest in Ubud</p>
-						<p>Speaking about the best sights of Bali, one cannot help but talk about the area covered with large trees, lush shrubs and impassable thickets.</p>
-					</div>
-				</div>
-				<div class="bar">
-						<img src="img/water.png" alt="">
-					<div class="text-container__bar">
-						<p>Ujung Water Palace</p>
-						<p>The most beautiful building of the island is also included in the list of "the most interesting places in Bali". Each bush of the palace territory is carefully trimmed and well-groomed.</p>
-					</div>
-				</div>
-				<div class="bar">
-						<img src="img/temple.png" alt="">
-					<div class="text-container__bar">
-						<p>Tirta Gangga Water Palace</p>
-						<p>If you are tired of a beach holiday, considering affordable excursions in Bali, pay attention to this object of three luxurious palace complexes.</p>
-					</div>
-				</div>
-				<div class="bar">
-						<img src="img/tirta.png" alt="">
-					<div class="text-container__bar">
-						<p>Pura Besakih Temple</p>
-						<p>The ancestor” of all the temples and the main shrine of Bali invariably tops the rating of the most visited architectural monuments.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="galerry">
-		<div class="content">
-			<a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
-			<div class="header__gallery">
-				Our exclusive tour schedule will not leave you indifferent
-			</div>
-			<div class="check-box-container">
-				<div class="image-box__check-box-container">
-					<img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
-				</div>
-				<div id="check-box" class="check-box__check-box-container">
-					<input checked="checked" type="radio" id="day1" name="day" value="day1">
-					<label for="day1" class="radio-container__check-box">
-						<div class="radio-container__text-box">
-							<div class="dot-box">
-								<!--it`s really contains dot-->
-								
-							</div>
-							<div class="text-container__radio">
-								<p>Day 1</p>
-								<p>Monkey forest in ubud with unique stone sculptures and temples</p>
-							</div>
-						</div>
-					</label>
-					<input type="radio" id="day2" name="day" value="day2">
-					<label for="day2" class="radio-container__check-box">
-						<div class="radio-container__text-box">
-							<div class="dot-box">
-								
-							</div>
-							<div class="text-container__radio">
-								<p>Day 2</p>
-								<p>Ujung Water Palace, the most beautiful structure of the island, is also included in the list.</p>
-							</div>
-						</div>
-					</label>
-					<input type="radio" id="day3" name="day" value="day3">
-					<label for="day3" class="radio-container__check-box">
-						<div class="radio-container__text-box">
-							<div class="dot-box">
-								<!--it`s really contains dot-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600;700&family=Inter:wght@400;500;600;700&family=Lato:ital,wght@0,300;0,400;1,400;1,700&family=Montserrat&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Bali</title>
+    </head>
+    <body>
+        <header>
+            <div class="content">
+                <div class="content-box__header">
+                    <div class="text__header">
+                        travel bali
+                    </div>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
+                    <nav class="header-menu">
+                        <ul class="buttons-container__header">
+                            <li>
+                                <a href="#home" class="button__header">Home</a>
+                            </li>
+                            <li>
+                                <a href="#attraction" class="button__header">Attraction</a>
+                            </li>
+                            <li>
+                                <a href="#timeline" class="button__header">Timeline</a>
+                            </li>
+                            <li>
+                                <a href="#reviev" class="button__header">Reviev</a>
+                            </li>
+                            <li>
+                                <a href="#FAQ" class="button__header">FAQ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+                </div>
+            </div>
+        </header>
+        <div id="home" class="text-block">
+            <div class="content">
+                <div class="text-container">
+                    <div class="bigger-text__text-block">
+                        <span>READY TO DIVE INTO THE WORLD</span><br>
+                        <span>OF FABULOUS BALI</span>
+                        <span>All in one: last-minute tours, canceled tours, early booking offers and special rates from tour operators.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="image-box">
+            <div class="content">
+                <div class="img-container__image-box">
+                    <div class="video-container__image-box">
+                        <div class="text-box__video-container">
+                            <p>The best places in the resort</p>
+                            <p>Watch the new video</p>
+                        </div>
+                        <div class="video-box__video-container">
+                        attractiongre    <a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" viewbox="0 0 14 17" fill="none">
+                                    <path d="M13.3561 8.7143L0.628389 16.7312L0.628389 0.697375L13.3561 8.7143Z" fill="#565656"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sponsors">
+            <div class="content">
+                <div class="sponsors__container">
+                    <img src="img/sponsor1.png" alt="">
+                    <img src="img/sponsor2.png" alt="">
+                    <img src="img/sponsor3.png" alt="">
+                    <img src="img/sponsor4.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="attraction">
+            <div class="content">
 
-							</div>
-							<div class="text-container__radio">
-								<p>Day 3</p>
-								<p>Tirta gangga water palace if you are tired of a beach holiday, considering affordable excursions in Bali</p>
-							</div>
-						</div>
-					</label>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-	<script src="js/index.js"></script>
-</body>
+                <a id="attraction" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Attraction</a>
+                <div class="header__attraction">
+                    <p>You Will See The Most Beautiful Sights Of Bali</p>
+                    <p>The sights of Bali are so numerous and varied that even an experienced tourist will look at them with undisguised surprise and delight.
+                    </p>
+                </div>
+                <div class="information__attraction">
+                    <div class="bar">
+                        <img src="img/forest.png" alt="">
+                        <div class="text-container__bar">
+                            <p>Monkey forest in Ubud</p>
+                            <p>Speaking about the best sights of Bali, one cannot help but talk about the area covered with large trees, lush shrubs and impassable thickets.</p>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <img src="img/water.png" alt="">
+                        <div class="text-container__bar">
+                            <p>Ujung Water Palace</p>
+                            <p>The most beautiful building of the island is also included in the list of "the most interesting places in Bali". Each bush of the palace territory is carefully trimmed and well-groomed.</p>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <img src="img/temple.png" alt="">
+                        <div class="text-container__bar">
+                            <p>Tirta Gangga Water Palace</p>
+                            <p>If you are tired of a beach holiday, considering affordable excursions in Bali, pay attention to this object of three luxurious palace complexes.</p>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <img src="img/tirta.png" alt="">
+                        <div class="text-container__bar">
+                            <p>Pura Besakih Temple</p>
+                            <p>The ancestor” of all the temples and the main shrine of Bali invariably tops the rating of the most visited architectural monuments.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="galerry">
+            <div class="content">
+                <a id="timeline" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Timeline</a>
+                <div class="header__gallery">
+                    Our exclusive tour schedule will not leave you indifferent
+                </div>
+                <div class="check-box-container">
+                    <div class="image-box__check-box-container">
+                        <img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
+                    </div>
+                    <div id="check-box" class="check-box__check-box-container">
+                        <input checked="checked" type="radio" id="day1" name="day" value="day1">
+                        <label for="day1" class="radio-container__check-box">
+                            <div class="radio-container__text-box">
+                                <div
+                                    class="dot-box"><!--it`s really contains dot-->
+
+                                </div>
+                                <div class="text-container__radio">
+                                    <p>Day 1</p>
+                                    <p>Monkey forest in ubud with unique stone sculptures and temples</p>
+                                </div>
+                            </div>
+                        </label>
+                        <input type="radio" id="day2" name="day" value="day2">
+                        <label for="day2" class="radio-container__check-box">
+                            <div class="radio-container__text-box">
+                                <div class="dot-box"></div>
+                                <div class="text-container__radio">
+                                    <p>Day 2</p>
+                                    <p>Ujung Water Palace, the most beautiful structure of the island, is also included in the list.</p>
+                                </div>
+                            </div>
+                        </label>
+                        <input type="radio" id="day3" name="day" value="day3">
+                        <label for="day3" class="radio-container__check-box">
+                            <div class="radio-container__text-box">
+                                <div class="dot-box"><!--it`s really contains dot-->
+                                </div>
+                                <div class="text-container__radio">
+                                    <p>Day 3</p>
+                                    <p>Tirta gangga water palace if you are tired of a beach holiday, considering affordable excursions in Bali</p>
+                                </div>
+                            </div>
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
