--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <p>Watch the new video</p>
                         </div>
                         <div class="video-box__video-container">
-                        attractiongre    <a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik">
+                            <a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" viewbox="0 0 14 17" fill="none">
                                     <path d="M13.3561 8.7143L0.628389 16.7312L0.628389 0.697375L13.3561 8.7143Z" fill="#565656"/>
                                 </svg>
