--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="content">
-                <div class="content-box__header">
+                <div id="home"  class="content-box__header">
                     <div class="text__header">
                         travel bali
                     </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </header>
-        <div id="home" class="text-block">
+        <div class="text-block">
             <div class="content">
                 <div class="text-container">
                     <div class="bigger-text__text-block">
@@ -82,7 +82,6 @@
         </div>
         <div class="attraction">
             <div class="content">
-
                 <a id="attraction" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Attraction</a>
                 <div class="header__attraction">
                     <p>You Will See The Most Beautiful Sights Of Bali</p>
@@ -124,9 +123,9 @@
         <div class="galerry">
             <div class="content">
                 <a id="timeline" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Timeline</a>
-                <div class="header__gallery">
+                <h2 class="header__gallery">
                     Our exclusive tour schedule will not leave you indifferent
-                </div>
+                </h2>
                 <div class="check-box-container">
                     <div class="image-box__check-box-container">
                         <img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
@@ -170,6 +169,154 @@
                 </div>
             </div>
         </div>
+        <div class="reviev">
+            <div class="content">
+                <a id="reviev" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Reviev</a>
+                <div class="wrapper__reviev">
+                    <h2>You can always leave a review, it is very important for us</h2>
+                    <div class="button-container__reviev">
+                        <div class="reviev-button left-button">
+                        </div>
+                        <div class="reviev-button right-button">
+                        </div>
+                    </div>
+                </div>
+                <div class="revievs-container">
+                    <div class="reviev-block">
+                        <ul class="mark">
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                        </ul>
+                        <div class="text__reviev-block">
+                            It has not been forgotten. My husband and I are very glad that we fell in love with the guys from around the world, everything was exactly as promised, everything is clearly on schedule, I recommend you will be satisfied
+                        </div>
+                        <div class="person__reviev-block">
+                            <div class="avatar-box">
+                                <img src="img/person1.png" alt="" class="avatar">
+                            </div>
+                            <div class="name">Margarita Carlos</div>
+                        </div>
+                    </div>
+                    <div class="reviev-block">
+                        <ul class="mark">
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                            <li><img src="img/icons/star.png" alt="*"></li>
+                        </ul>
+                        <div class="text__reviev-block">
+                            We were accommodated in a great hotel very interesting excursions fantastic nature we will definitely use their services again
+                        </div>
+                        <div class="person__reviev-block">
+                            <div class="avatar-box">
+                                <img src="img/person2.png" alt="" class="avatar">
+                            </div>
+                            <div class="name">Angelina Jolie</div>
+                        </div>
+                    </div>
+                    <div class="reviev-block">
+                        <ul class="mark">
+                            <li><img class="star" src="img/icons/star.png" alt="*"></li>
+                            <li><img class="star" src="img/icons/star.png" alt="*"></li>
+                            <li><img class="star" src="img/icons/star.png" alt="*"></li>
+                            <li><img class="star" src="img/icons/star.png" alt="*"></li>
+                            <li><img class="star" src="img/icons/star.png" alt="*"></li>
+                        </ul>
+                        <div class="text__reviev-block">
+                            It has not been forgotten. My husband and I are very glad that we fell in love with the guys from around the world, everything was exactly as promised, everything is clearly on schedule, I recommend you will be satisfied
+                        </div>
+                        <div class="person__reviev-block">
+                            <div class="avatar-box">
+                                <img src="img/person3.png" alt="" class="avatar">
+                            </div>
+                            <div class="name">Margarita Carlos</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="faq">
+            <div class="content">
+                <a id="FAQ" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">FAQ</a>
+                <div class="faq-wrapper">
+                    <div class="text-side__faq">
+                        <h2>Maybe any question, check this out</h2>
+                        <div class="dropdown-container">
+                                <div class="dropdown-child__faq">
+                                    <div class="dropdown-opener">
+                                        <span>Timeline our exprdition rare experience</span>        
+                                        <div class="dropdown-button"></div>
+                                    </div>
+                                    <div class="dropdown-body">
+                                        Our expeditions are considered among the best to date among all competitors
+                                        we will take you to the most amazing places of our resort you will definitely be satisfied with our service
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="dropdown-container">
+                            <div class="dropdown-child__faq">
+                                <div class="dropdown-opener">
+                                    <span>Register for expedition trip</span>        
+                                    <div class="dropdown-button"></div>
+                                </div>
+                                <div class="dropdown-body">
+                                    Our expeditions are considered among the best to date among all competitors
+                                    we will take you to the most amazing places of our resort you will definitely be satisfied with our service
+                                </div>
+                            </div>
+                    </div>
+                    <div class="dropdown-container">
+                        <div class="dropdown-child__faq">
+                            <div class="dropdown-opener">
+                                <span>Safety and loss guarantee</span>        
+                                <div class="dropdown-button"></div>
+                            </div>
+                            <div class="dropdown-body">
+                                Our expeditions are considered among the best to date among all competitors
+                                we will take you to the most amazing places of our resort you will definitely be satisfied with our service
+                            </div>
+                        </div>
+                </div>
+                    </div>
+                    <div class="image-side__faq">
+                        <img src="img/faq-picture.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="content">
+                <div class="content-box__header">
+                  <div class="text__header">
+                       travel bali
+                  </div>
+                <nav class="header-menu">
+                    <ul class="buttons-container__header">
+                        <li>
+                            <a href="#home" class="button__header">Home</a>
+                        </li>
+                        <li>
+                            <a href="#attraction" class="button__header">Attraction</a>
+                        </li>
+                        <li>
+                            <a href="#timeline" class="button__header">Timeline</a>
+                        </li>
+                        <li>
+                            <a href="#reviev" class="button__header">Reviev</a>
+                        </li>
+                        <li>
+                            <a href="#FAQ" class="button__header">FAQ</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+            </div>
+        </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="js/index.js"></script>
     </body>
