--- a/index.html
+++ b/index.html
@@ -127,16 +127,19 @@
                     Our exclusive tour schedule will not leave you indifferent
                 </h2>
                 <div class="check-box-container">
-                    <div class="image-box__check-box-container">
-                        <img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
+                    <div class="gallery-container">
+                        <div class="image-box__check-box-container">
+                            <img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
+                            <img id="galerry-image" src="img/gallery/galerry_day2.png" alt="">
+                            <img id="galerry-image" src="img/gallery/galerry_day3.png" alt="">
+                        </div>
                     </div>
                     <div id="check-box" class="check-box__check-box-container">
                         <input checked="checked" type="radio" id="day1" name="day" value="day1">
                         <label for="day1" class="radio-container__check-box">
                             <div class="radio-container__text-box">
-                                <div
-                                    class="dot-box"><!--it`s really contains dot-->
-
+                                <div class="dot-box">
+                                    <!--it`s really contains dot-->
                                 </div>
                                 <div class="text-container__radio">
                                     <p>Day 1</p>
