--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                     <div class="text__header">
                         travel bali
                     </div>
-                    <div class="header__burger">
-                        <span></span>
+                    <div class="burger-container">
+                        <div class="header__burger">
+                            <span></span>
+                        </div>
                     </div>
                     <nav class="header-menu">
                         <ul class="buttons-container__header">
@@ -36,7 +38,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <a" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button greeny-button">Get a Ticket</a>
                 </div>
             </div>
         </header>
@@ -44,8 +46,8 @@
             <div class="content">
                 <div class="text-container">
                     <div class="bigger-text__text-block">
-                        <span>READY TO DIVE INTO THE WORLD</span><br>
-                        <span>OF FABULOUS BALI</span>
+                        <span class="bigger-text">READY TO DIVE INTO THE WORLD</span><br>
+                        <span class="bigger-text">OF FABULOUS BALI</span>
                         <span>All in one: last-minute tours, canceled tours, early booking offers and special rates from tour operators.</span>
                     </div>
                 </div>
@@ -90,28 +92,36 @@
                 </div>
                 <div class="information__attraction">
                     <div class="bar">
-                        <img src="img/forest.png" alt="">
+                        <div class="bar-img">
+                            <img src="img/forest.png" alt="">
+                        </div>
                         <div class="text-container__bar">
                             <p>Monkey forest in Ubud</p>
                             <p>Speaking about the best sights of Bali, one cannot help but talk about the area covered with large trees, lush shrubs and impassable thickets.</p>
                         </div>
                     </div>
                     <div class="bar">
-                        <img src="img/water.png" alt="">
+                        <div class="bar-img">
+                            <img src="img/water.png" alt="">
+                        </div>
                         <div class="text-container__bar">
                             <p>Ujung Water Palace</p>
                             <p>The most beautiful building of the island is also included in the list of "the most interesting places in Bali". Each bush of the palace territory is carefully trimmed and well-groomed.</p>
                         </div>
                     </div>
                     <div class="bar">
-                        <img src="img/temple.png" alt="">
+                        <div class="bar-img">
+                            <img src="img/temple.png" alt="">
+                        </div>
                         <div class="text-container__bar">
                             <p>Tirta Gangga Water Palace</p>
                             <p>If you are tired of a beach holiday, considering affordable excursions in Bali, pay attention to this object of three luxurious palace complexes.</p>
                         </div>
                     </div>
                     <div class="bar">
-                        <img src="img/tirta.png" alt="">
+                        <div class="bar-img">
+                            <img src="img/tirta.png" alt="">
+                        </div>
                         <div class="text-container__bar">
                             <p>Pura Besakih Temple</p>
                             <p>The ancestor” of all the temples and the main shrine of Bali invariably tops the rating of the most visited architectural monuments.</p>
@@ -168,6 +178,35 @@
                                 </div>
                             </div>
                         </label>
+                    </div>
+                </div>
+                <div class="checkbox-mobile">
+                    <div class="image-window__checkbox__mobile">
+                        <div class="image-caruseel__checkbox-mobile">
+                            <img id="galerry-image" src="img/gallery/galerry_day1.png" alt="">
+                            <img id="galerry-image" src="img/gallery/galerry_day2.png" alt="">
+                            <img id="galerry-image" src="img/gallery/galerry_day3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="text-caruseel-container">
+                        <div class="left-button__checkbox galerry-button"></div>
+                        <div class="text-window__checkbox">
+                            <div class="text-caruseel">
+                                <div class="day__text-caruseel">
+                                    <p>Day 1</p>
+                                    <p>Monkey forest in ubud with unique stone sculptures and temples</p>
+                                </div>
+                                <div class="day__text-caruseel">
+                                    <p>Day 2</p>
+                                    <p>Ujung Water Palace, the most beautiful structure of the island, is also included in the list.</p>
+                                </div>
+                                <div class="day__text-caruseel">
+                                    <p>Day 3</p>
+                                    <p>Tirta gangga water palace if you are tired of a beach holiday, considering affordable excursions in Bali</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right-button__checkbox galerry-button"></div>
                     </div>
                 </div>
             </div>
