--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="text-caruseel-container">
-                        <div class="left-button__checkbox galerry-button"></div>
+                        <div class="left-button__checkbox galerry-button galerry-button-active"></div>
                         <div class="text-window__checkbox">
                             <div class="text-caruseel">
                                 <div class="day__text-caruseel">
@@ -217,7 +217,7 @@
                 <div class="wrapper__reviev">
                     <h2>You can always leave a review, it is very important for us</h2>
                     <div class="button-container__reviev">
-                        <div class="reviev-button left-button">
+                        <div class="reviev-button left-button reviev-button-active">
                         </div>
                         <div class="reviev-button right-button">
                         </div>
@@ -332,32 +332,45 @@
         </div>
         <footer>
             <div class="content">
-                <div class="content-box__header">
-                  <div class="text__header">
-                       travel bali
-                  </div>
-                <nav class="header-menu">
-                    <ul class="buttons-container__header">
-                        <li>
-                            <a href="#home" class="button__header">Home</a>
-                        </li>
-                        <li>
-                            <a href="#attraction" class="button__header">Attraction</a>
-                        </li>
-                        <li>
-                            <a href="#timeline" class="button__header">Timeline</a>
-                        </li>
-                        <li>
-                            <a href="#reviev" class="button__header">Reviev</a>
-                        </li>
-                        <li>
-                            <a href="#FAQ" class="button__header">FAQ</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a" target="_blank" href="https://www.youtube.com/watch?v=8UjWwMtrETk&ab_channel=ScorchRaserik" class="green-button">Get a Ticket</a>
+                <div class="footer-wrapper">
+                    <div class="footer-nav">
+                        <div class="content-box__header">
+                            <div class="text__header">
+                                travel bali
+                            </div>
+                            <nav class="header-menu">
+                                <ul class="buttons-container__header">
+                                    <li>
+                                        <a href="#home" class="button__header">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="#attraction" class="button__header">Attraction</a>
+                                    </li>
+                                    <li>
+                                        <a href="#timeline" class="button__header">Timeline</a>
+                                    </li>
+                                    <li>
+                                        <a href="#reviev" class="button__header">Reviev</a>
+                                    </li>
+                                    <li>
+                                        <a href="#FAQ" class="button__header">FAQ</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="contacts__footer">
+                        <div class="phone__footer">
+                            <img src="img/icons/call-calling.png" alt="">
+                            <a href="tel:+380808080808">+380808080808</a>
+                        </div>
+                        <div class="email__footer">
+                            <img src="img/icons/directbox-notif.png" alt="">
+                            <a href="mailto:aroundtheworld@gmail.com">aroundtheworld@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="js/index.js"></script>
